ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synap-ocr
  namespace: synap 
  labels:
    app: synap-ocr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synap-ocr
  template:
    metadata:
      labels:
        app: synap-ocr
    spec:
      containers:
      - name: synap-ocr
        image: charlescr.azurecr.io/synap/ocr:v2.0.2506.r05
        command: ["/bin/bash"]
#        command: ["tail", "-f" , "/dev/null" ]
        args: ["-c", "cd /app/SynapOCR && source venv/bin/activate && ./_startup.sh"]
        ports:
        - containerPort: 62975
        resources:
          limits:
            nvidia.com/gpu: 1 # GPU 요청
          requests:
            cpu: 4
            memory: "16Gi" # 공유 메모리 요청
        volumeMounts:
        - mountPath: /dev/shm
          name: shm
#        - name: settings
#          mountPath: /app/restapi/settings.json
#          subPath: settings.json
        - name: ocr-license 
          mountPath: /app/SynapOCR/license.dat
          subPath: license.dat
#        - name: docuanalyzer-exe-pvc
#          mountPath: /app/restapi/module/DocuAnalyzer_exe
#          subPath: DocuAnalyzer_exe
      volumes:
      - name: shm
        emptyDir:
          medium: Memory
#      - name: settings
#        configMap:
#          name: settings
      - name: ocr-license
        configMap:
          name: ocr-license 
#      - name: docuanalyzer-exe-pvc
#        persistentVolumeClaim:
#          claimName: synap-da-exe-pvc
      nodeSelector:
        agentpool: gput4
