document-analyzer-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: synap-document-analyzer-service
 namespace: synap 
spec:
 type: ClusterIP
 selector:
   app: synap-document-analyzer
 ports:
   - port: 8080
     targetPort: 8080
