ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: synap-ocr-service
 namespace: synap 
spec:
 type: ClusterIP
 selector:
   app: synap-ocr
 ports:
   - port: 8080
     targetPort: 62975
